# census-api

./: .gitignore  CensusGdfAPI.py  ExampleCall.py  HelperFunctions.py  LICENSE  README.md  pyproject.toml  requirements.txt
censusapi/: censusgdf.py  example.py  example_default_vars.py  example_stochastic_census.py  helperfunctions.py  stochasticassigment.py
example/: example.py
tests/: test.py  test_columns.py  test_filemaking.py  test_helperfunctions.py
tests/data/input/: testdata.geojson
