[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Census_API_GDF_zoed"
version = "0.0.2"
authors = [
  { name="Zoe De Simone", email="zoed@mit.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zoedesimone/census-api"
"Bug Tracker" = "https://github.com/zoedesimone/census-api/issues"

